# poneglyph

./: .cursorrules  .gitignore  .graphifyignore  .opencode.json  .poneglyphignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  opencode.jsonc  package.json
.claude/: settings.json  settings.json.bak  task-map.json
.cursor/: mcp.json
.gemini/: settings.json  settings.json.bak
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.github/workflows/: release.yml
.opencode/: instructions.md
.opencode/plugins/: poneglyph.ts
.poneglyph/: code-graph-lock.json
.qoder/: settings.json
crates/poneglyph-cli/: Cargo.toml
crates/poneglyph-cli/src/: banner.txt  daemon.rs  demo.rs  detect.rs  eval.rs  graph_registry.rs  logo.ans  main.rs  models.rs
crates/poneglyph-cli/src/assets/: config-template.toml  rules.txt
crates/poneglyph-core/: Cargo.toml
crates/poneglyph-core/src/: activity.rs  cold.rs  compress.rs  config.rs  consolidate.rs  embed.rs  enrich.rs  error.rs  graph.rs  lib.rs  llm.rs  model.rs  pipeline.rs  privacy.rs  project.rs  retrieve.rs  store.rs
crates/poneglyph-core/src/codegraph/: blast_radius.rs  build.rs  explore.rs  export.rs  mod.rs  parse.rs  query.rs
crates/poneglyph-core/tests/: enrich_llm_test.rs  pipeline_llm_test.rs
crates/poneglyph-http/: Cargo.toml
crates/poneglyph-http/src/: api.rs  auth.rs  error.rs  ingest.rs  lib.rs  state.rs  viewer.rs
crates/poneglyph-http/tests/: api_test.rs  viewer_test.rs
crates/poneglyph-mcp/: Cargo.toml
crates/poneglyph-mcp/src/: server.rs  tools.rs
crates/poneglyph-mcp/tests/: mcp_roundtrip.rs
docs/: CODEGRAPH.md  COMPRESSION.md  HOW_IT_WORKS.md  INSTALL.md  INTEGRATIONS.md  MIGRATION.md  SESSION-NOTES.md  TODO.md  poneglyph_PRD.md  poneglyph_cargo_skeleton.toml
hooks/claude-code/: README.md  posttooluse.sh  sessionstart.sh  settings.json.example  stop.sh  test-posttooluse.sh  userpromptsubmit.sh
hooks/opencode/: README.md  poneglyph.ts
hooks/poneglyph/: SKILL.md
scripts/: build-release.sh  install.sh  npm-postinstall.js  sync-todo.py  uninstall.sh
skills/poneglyph/: SKILL.md
viewer/: .cta.json  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
viewer/src/: main.tsx  routeTree.gen.ts  styles.css
viewer/src/components/: cosmos-graph.tsx  floating-edge.tsx  timeline-indicators.tsx  type-badge.tsx  ui.tsx
viewer/src/components/ui/: alert-dialog.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  select.tsx  sheet.tsx  sidebar.tsx  switch.tsx  table.tsx  timeline.tsx  tooltip.tsx
viewer/src/lib/: api.ts  ring.test.ts  ring.ts  theme.ts  types.ts
viewer/src/routes/: __root.tsx  activity.tsx  codegraph.tsx  graph.tsx  index.tsx  memories.$id.tsx  memories.index.tsx  search.tsx  settings.tsx  status.tsx  timeline.tsx  token-savings.tsx
