[workspace]
resolver = "2"
members = [
    "crates/poneglyph-core",
    "crates/poneglyph-mcp",
    "crates/poneglyph-http",
    "crates/poneglyph-cli",
]

[workspace.package]
version = "1.0.1"
edition = "2024"
authors = ["Brilyan"]
license = "MIT"

# ---------------------------------------------------------------------------
# Shared dependency versions
# ---------------------------------------------------------------------------
[workspace.dependencies]

# Async runtime
tokio          = { version = "1",   features = ["full"] }
tokio-util     = { version = "0.7" }

# MCP (official Rust SDK, stdio transport)
rmcp           = { version = "1",   features = ["server", "transport-io", "macros"] }

# HTTP server
axum           = { version = "0.8", features = ["json", "ws"] }
tower          = { version = "0.5" }
tower-http     = { version = "0.6", features = ["cors", "fs", "trace"] }

# Embeddings — candle backend is the default (no ONNX / Python)
embed_anything = { version = "0.6", default-features = false }

# Pin candle to avoid embed_anything incompatibility
candle-core = { version = "=0.9.1" }

# Storage
rusqlite        = { version = "0.32", features = ["bundled"] }
sqlite-vec      = { version = "0.1" }
deadpool-sqlite = { version = "0.9" }
zstd            = { version = "0.13" }

# In-memory cache
moka = { version = "0.12", features = ["future"] }

# Optional LLM calls (OpenAI-compatible endpoint)
async-openai = { version = "0.27" }

# Direct HTTP for non-OpenAI-compat providers (Anthropic, Gemini, Ollama embeddings)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Privacy: redaction_tags / exclude_paths glob matching
regex   = { version = "1" }
globset = { version = "0.4" }

# Static viewer embedding
rust-embed = { version = "8", features = ["axum"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
schemars   = { version = "1.2" }

# Error handling + logging
anyhow             = { version = "1" }
thiserror          = { version = "2" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
figment     = { version = "0.10", features = ["toml", "env"] }
directories = { version = "5" }
toml        = { version = "0.8" }

# HTTP test plumbing
http-body-util = { version = "0.1" }
mime_guess     = { version = "2" }

# UUID / time
uuid   = { version = "1",   features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }

# Byte conversion for sqlite-vec — manual impl, no dep needed

# Code knowledge graph (Tree-sitter)
tree-sitter            = { version = "0.25" }
tree-sitter-rust       = { version = "0.24" }
tree-sitter-typescript = { version = "0.23" }
tree-sitter-javascript = { version = "0.23" }
tree-sitter-python     = { version = "0.23" }
tree-sitter-go         = { version = "0.23" }
tree-sitter-c          = { version = "0.24" }
tree-sitter-cpp        = { version = "0.23" }
tree-sitter-java       = { version = "0.23" }
tree-sitter-c-sharp    = { version = "0.23" }
tree-sitter-php        = { version = "0.24" }
tree-sitter-ruby       = { version = "0.23" }
tree-sitter-kotlin-ng   = { version = "1.1" }
tree-sitter-swift      = { version = "0.7" }
tree-sitter-bash       = { version = "0.25" }
tree-sitter-scala      = { version = "0.26" }
notify                 = { version = "6" }
ignore                 = { version = "0.4" }
rayon                  = { version = "1" }

# Internal crates
poneglyph-core = { path = "crates/poneglyph-core" }
poneglyph-mcp  = { path = "crates/poneglyph-mcp" }
poneglyph-http = { path = "crates/poneglyph-http" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
