[package]
name    = "poneglyph-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "poneglyph"
path = "src/main.rs"

[dependencies]
poneglyph-core = { workspace = true }
poneglyph-mcp  = { workspace = true }
poneglyph-http = { workspace = true }
tokio          = { workspace = true }
clap           = { workspace = true }
figment        = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
toml           = "0.8"
