[package]
name    = "poneglyph-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "poneglyph"
path = "src/main.rs"

[features]
# Compile the built web viewer into the binary (see scripts/build-release.sh).
viewer = ["poneglyph-http/embed-viewer"]

[dependencies]
poneglyph-core = { workspace = true }
poneglyph-mcp  = { workspace = true }
poneglyph-http = { workspace = true }
tokio          = { workspace = true }
clap           = { workspace = true }
figment        = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
chrono         = { workspace = true }
rusqlite       = { workspace = true }
directories    = { workspace = true }

[dev-dependencies]
tempfile = "3"

