[package]
name    = "poneglyph-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "poneglyph"
path = "src/main.rs"

[features]
default = ["viewer", "llm-openai"]

# Agent integrations — claude-code is the default; others are opt-in.
claude-code = []
cursor      = []
gemini      = []
opencode    = []
codex       = []
copilot     = []
all-agents  = ["cursor", "gemini", "opencode", "codex", "copilot"]

# Compile the built web viewer into the binary (see scripts/build-release.sh).
# poneglyph-http itself is always linked now — `mcp` serves /api + /ingest
# off the same engine process; this only toggles embedding the SPA assets
# and the `poneglyph viewer` subcommand.
viewer = ["poneglyph-http/embed-viewer"]

# LLM-backed enrichment/compression is opt-in per provider — none compiled
# in by default. `llm-all` is a convenience bundle of all three.
llm-openai    = ["poneglyph-core/llm-openai"]
llm-anthropic = ["poneglyph-core/llm-anthropic"]
llm-gemini    = ["poneglyph-core/llm-gemini"]
llm-all       = ["llm-openai", "llm-anthropic", "llm-gemini"]

[dependencies]
poneglyph-core = { workspace = true }
poneglyph-mcp  = { workspace = true }
poneglyph-http = { workspace = true }
axum           = { workspace = true }
tokio          = { workspace = true }
clap           = { workspace = true }
figment        = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
chrono         = { workspace = true }
rusqlite       = { workspace = true }
directories    = { workspace = true }
notify         = { workspace = true }
libc           = { workspace = true }

[dev-dependencies]
tempfile = "3"
