[package]
name    = "poneglyph-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio           = { workspace = true }
embed_anything  = { workspace = true }
rusqlite        = { workspace = true }
sqlite-vec      = { workspace = true }
deadpool-sqlite = { workspace = true }
moka            = { workspace = true }
async-openai    = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
figment         = { workspace = true }
toml            = { workspace = true }
directories     = { workspace = true }
candle-core     = { workspace = true }
reqwest         = { workspace = true }
regex           = { workspace = true }
globset         = { workspace = true }
zstd            = { workspace = true }
tree-sitter            = { workspace = true }
tree-sitter-rust       = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-go         = { workspace = true }
notify                 = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum     = { workspace = true }
