[package]
name    = "poneglyph-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio           = { workspace = true }
embed_anything  = { workspace = true }
rusqlite        = { workspace = true }
sqlite-vec      = { workspace = true }
async-openai    = { workspace = true, optional = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
figment         = { workspace = true }
toml            = { workspace = true }
directories     = { workspace = true }
candle-core     = { workspace = true }
reqwest         = { workspace = true }
regex           = { workspace = true }
globset         = { workspace = true }
zstd            = { workspace = true }
tree-sitter            = { workspace = true }
tree-sitter-rust       = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-go         = { workspace = true }
tree-sitter-c          = { workspace = true }
tree-sitter-cpp        = { workspace = true }
tree-sitter-java       = { workspace = true }
tree-sitter-c-sharp    = { workspace = true }
tree-sitter-php        = { workspace = true }
tree-sitter-ruby       = { workspace = true }
tree-sitter-kotlin-ng   = { workspace = true }
tree-sitter-swift      = { workspace = true }
tree-sitter-bash       = { workspace = true }
tree-sitter-scala      = { workspace = true }
notify                 = { workspace = true }
ignore                 = { workspace = true }
rayon                  = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum     = { workspace = true }

[features]
# LLM-backed enrichment/compression is opt-in per provider — none compiled
# in by default. Compression itself has no provider-specific code (it's
# always one LlmClient::complete call); these gate the three Backend
# implementations in llm.rs.
llm-openai    = ["dep:async-openai"]
llm-anthropic = []
llm-gemini    = []
llm-all       = ["llm-openai", "llm-anthropic", "llm-gemini"]
