[package]
name    = "poneglyph-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
poneglyph-core = { workspace = true }
rmcp           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
schemars       = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
rmcp     = { workspace = true, features = ["client"] }
tempfile = "3"
